# 3DGeometryProcessing-and-Acquisition

./: README.md
ICP-Registration/: CMakeLists.txt  ICPHandler.cpp  ICPHandler.hpp  ICPViewerManager.cpp  ICPViewerManager.hpp  PointCloudData.cpp  PointCloudData.hpp  README.md  main.cpp
Laplacian-Smoothing-and-Spectral-reconstruction/: CMakeLists.txt  README.md  main.cpp
